# airbnb-listings

./: .pre-commit-config.yaml  README.md  pyproject.toml
CEO_answers/: 01-answers.ipynb  02-answers.ipynb  03-answers.ipynb
exercices/: 01-ex.ipynb  02-ex.ipynb  03-ex.ipynb
