[tool.poetry]
name = "comunidadeDS"
version = "0.1.0"
description = ""
authors = ["Victor Zucchetti <victorzucchetti@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
plotly = "^5.22.0"
folium = "^0.16.0"
numpy = "^1.26.4"
ipykernel = "^6.29.4"
nbformat = "^5.10.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
